packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/responses/bad/results_unknown_profile.cbor
£fstatusÈkstatus_textbOKgresults¡imycompany 